kubernetes/main/apps/serverless/fission/functions/ddns/specs/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudflare-ddns
  namespace: serverless
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - serverless.garb.dev
  rules:
    - backendRefs:
        - name: router
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /ddns/v1/*
